@@ -20,7 +20,7 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 # MA 02110-1301, USA
 
-AC_INIT([libquantum], [1.0.0], [libquantum@libquantum.de])
+AC_INIT([libquantum], [1.1.0], [libquantum@libquantum.de])
 AC_CONFIG_SRCDIR([classic.c])
 AC_CONFIG_HEADER([config.h])
 
@@ -34,6 +34,13 @@ AC_PROG_LIBTOOL
 
 # Checks for libraries.
 AC_CHECK_LIB([m], [sqrt])
+AC_ARG_WITH(lapack,
+	[  --with-lapack        LAPACK support [default=yes]],
+	[if test $withval = "yes"
+	then 
+	     AC_CHECK_LIB([lapack], [cheev_])
+	fi] , [AC_CHECK_LIB([lapack], [cheev_])])
+
 
 # Checks for header files.
 AC_HEADER_STDC
@@ -44,7 +51,8 @@ AC_C_INLINE
 
 # Check for 64-bit integer
 AC_ARG_WITH([max-unsigned-type], 
-	[  --with-max-unsigned-type=ARG  integer type for quantum registers], 
+	[  --with-max-unsigned-type=ARG
+                          integer type for quantum registers], 
 	[MU_TYPE=$withval], [MU_TYPE="none"
 	AC_CHECK_TYPE([uint_64t], [AC_DEFINE([MAX_UNSIGNED], [uint_64t]) 
 	MU_TYPE="uint_64t"])])
@@ -66,7 +74,7 @@ fi
 
 # Check for complex number type
 AC_ARG_WITH([complex-type],
-	[  --with-complex-type=ARG  type for complex numbers], 
+	[  --with-complex-type=ARG type for complex numbers], 
 	[CF_TYPE=$withval
 ], [CF_TYPE="none"
 	AC_CHECK_TYPE([float _Complex], [AC_DEFINE([COMPLEX_FLOAT], 
@@ -86,7 +94,7 @@ fi
 # Check for the imaginary unit
 AC_MSG_CHECKING([for the imaginary unit])
 AC_ARG_WITH([imaginary],
-	[  --with-imaginary=ARG  name of the imaginary unit], 
+	[  --with-imaginary=ARG    name of the imaginary unit], 
 	[I=$withval], [I="none"
 	AC_COMPILE_IFELSE([AC_LANG_PROGRAM([$CF_TYPE z;], [z=I;])], 
 		[AC_DEFINE([IMAGINARY], [I], [Imaginary unit]) I="I"])
@@ -111,6 +119,9 @@ AC_ARG_ENABLE(profiling,
 	[if test $enableval = "yes"
 	    then CFLAGS="$CFLAGS -pg -fprofile-arcs -ftest-coverage"
 	fi], [])
+
+# Disable LAPACK check
+
 
 # Enable -Wall for gcc
 if test $CC = "gcc"
